--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
+    "router": "^1.3.8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
