--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
     "router": "^1.3.8",
+    "socket.io-client": "^4.8.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
